Made $color-accent brighter. Fixed alert close animation.
Used the $warning-color I was using for the alert as the new $color-accent, since the dark green I had was too dark.

I added setTimeout to the close alert callback function within alertMessage(). This finally allows me to also have a slideUp() jQuery animation before the alert is removed from the DOM.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1083,7 +1083,7 @@ ul.project-info {
     padding: 5px 10px;
     margin: 2px; }
   ul.project-info .skill-tags li:nth-child(even) {
-    background: #13505b; }
+    background: #2393a7; }
 
 /* === Accordion Triggers and Content === */
 .summary-trigger,
