--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -56,7 +56,8 @@ $color-tertiary: #2274a5;
 // $color-accent: #d7d9ce;
 // $color-accent: #6d1a36;
 // $color-accent: #2274a5;
-$color-accent: #13505b;
+// $color-accent: #13505b;
+$color-accent: #2393a7;
 
 $about-text-color: #fff;
 // $about-text-color: #555;
